Fixed things up with @export comments for Roxygen so that NAMESPACE has correct export statements.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,8 @@ Imports:
     stringr (>= 1.0.0),
     yaml,
     whisker
+Suggests:
+    testthat
 License: MIT
 URL: https://github.com/jonathan-g/slidify/
 BugReports: https://github.com/jonathan-g/slidify/issues
